--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
   flutter_web_plugins:
     sdk: flutter
   html: ^0.15.4
-  image: ^4.2.0
+  image: 4.1.7
   meta: ^1.12.0
   path: ^1.9.0
   universal_io: ^2.2.2
